# game_of_life

./: LICENSE.txt  MANIFEST.IN  MANIFEST.in  README.md  game_of_life.py  game_of_life.ui  info.json  main.py  pyproject.toml  requirements.txt
GameOfLife/: help_dialog.ui  main_window.ui
game_of_life/: __init__.py  game_of_life.py  game_of_life.ui
game_of_life/presets/: glider.npy  gosper_glider_gun.npy
src/presets/: pulsar.npy
